--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
 <!doctype html>
 <html><head><meta charset="utf-8" />
-<title>Static Site</title></head><body><h1>It works</h1></body></html>
+<title>Static Site</title>  <link rel="stylesheet" href="styles.css" />
+</head><body><h1>It works</h1></body></html>
