--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,40 @@
 <!doctype html>
-<html><head><meta charset="utf-8" />
-<title>Static Site</title>  <link rel="stylesheet" href="styles.css" />
-</head><body><h1>It works</h1></body></html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>beatrock</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <main>
+      <header>
+        <strong>beatrock</strong>
+        <a class="button" href="#pricing">Get Early Access</a>
+      </header>
+      <section class="card">
+        <h1>beatrock keeps your team focused.</h1>
+        <p>A focused SaaS that helps teams ship faster.</p>
+        <div class="button">Join the waitlist</div>
+      </section>
+      <section>
+        <h2>Features</h2>
+        <div class="card">
+          <p>Signal tracking, playbooks, and clear next steps in one place.</p>
+        </div>
+      </section>
+      <section id="pricing">
+        <h2>Pricing</h2>
+        <div class="card">
+          <p>Simple plans that scale with your revenue.</p>
+        </div>
+      </section>
+      <section>
+        <h2>FAQ</h2>
+        <div class="card">
+          <p>How fast can we launch? Typically in days.</p>
+        </div>
+      </section>
+    </main>
+  </body>
+</html>
