--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,1 @@
-Add a pricing estimator block with data hooks and a waitlist status element, e.g.
-
-<section id="pricing" class="pricing reveal">
-  ...
-  <div class="pricing-estimator" data-estimator>
-    <div class="estimator-row">
-      <label for="team-size">Team size</label>
-      <input type="range" id="team-size" min="1" max="200" value="10" />
-      <span class="team-size-value" data-team-size>10</span>
-    </div>
-    <div class="estimator-row">
-      <label class="toggle">
-        <input type="checkbox" id="billing-toggle" />
-        Annual billing (save 20%)
-      </label>
-    </div>
-    <div class="estimator-total">
-      <span data-price>$120</span>
-      <span class="per-month">per month</span>
-    </div>
-  </div>
-</section>
-
-Inside the waitlist form add:
-<div class="form-status" aria-live="polite" data-waitlist-status></div>
+<link rel='stylesheet' href='styles.css'><script src='app.js'></script>
