--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>beatrock</title>
     <link rel="stylesheet" href="styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Archivo+Black&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div class="page">
       <div class="orb orb--one"></div>
       <div class="orb orb--two"></div>
+      <div class="gridlines" aria-hidden="true"></div>
       <div class="shell">
         <header class="nav">
           <div class="logo">beatrock</div>
@@ -22,19 +24,112 @@
         </header>
         <main>
           <section class="hero reveal">
-            <div>
+            <div class="hero-text">
               <span class="badge">Ship faster · stay aligned</span>
               <h1>beatrock keeps momentum high.</h1>
-              <p>A focused product built to ship faster.</p>
-              <form id="waitlist-form">
-                <input type="email" name="email" placeholder="you@company.com" required />
-                <button class="button" type="submit">Join the waitlist</button>
-              </form>
+              <p>Build with focus. Beatrock turns goals into weekly wins with a rhythm your team can sustain.</p>
+              <div class="hero-actions">
+                <form id="waitlist-form">
+                  <input type="email" name="email" placeholder="you@company.com" required />
+                  <button class="button" type="submit">Join the waitlist</button>
+                </form>
+                <p class="form-note" id="form-note">Zero spam. Early teams get founder onboarding.</p>
+              </div>
+            </div>
+            <div class="hero-card">
+              <div class="pulse"></div>
+              <h3>Momentum board</h3>
+              <p>Pick a beat, align tasks, and watch delivery stack every week.</p>
+              <ul>
+                <li>Monday goals</li>
+                <li>Midweek pulse</li>
+                <li>Friday shiplist</li>
+              </ul>
             </div>
           </section>
+
+          <section id="features" class="features reveal">
+            <div class="section-title">
+              <span class="eyebrow">Features</span>
+              <h2>Designed for velocity and clarity.</h2>
+            </div>
+            <div class="feature-grid">
+              <article>
+                <h4>Beat sync</h4>
+                <p>Align priorities with a shared weekly cadence that keeps teams in flow.</p>
+              </article>
+              <article>
+                <h4>Pulse notes</h4>
+                <p>Capture micro-decisions without the meeting drag or lost context.</p>
+              </article>
+              <article>
+                <h4>Momentum signals</h4>
+                <p>Surface risks early so shipping never stalls out mid-sprint.</p>
+              </article>
+            </div>
+          </section>
+
+          <section id="workflow" class="workflow reveal">
+            <div class="section-title">
+              <span class="eyebrow">Workflow</span>
+              <h2>A 3-step rhythm.</h2>
+            </div>
+            <div class="workflow-steps">
+              <div class="step">
+                <span>01</span>
+                <h4>Set the beat</h4>
+                <p>Define outcomes, assign owners, and agree on what shipping looks like.</p>
+              </div>
+              <div class="step">
+                <span>02</span>
+                <h4>Hold the pulse</h4>
+                <p>Quick async check-ins replace endless status meetings.</p>
+              </div>
+              <div class="step">
+                <span>03</span>
+                <h4>Ship and learn</h4>
+                <p>Friday rollups capture wins, misses, and the next beat.</p>
+              </div>
+            </div>
+          </section>
+
+          <section id="pricing" class="pricing reveal">
+            <div class="section-title">
+              <span class="eyebrow">Pricing</span>
+              <h2>Simple, honest, ready to scale.</h2>
+            </div>
+            <div class="pricing-card">
+              <div>
+                <h3>Founding Teams</h3>
+                <p>Everything you need to run a weekly cadence.</p>
+                <ul>
+                  <li>Unlimited beats</li>
+                  <li>Team insights</li>
+                  <li>Priority onboarding</li>
+                </ul>
+              </div>
+              <div class="price">
+                <span>$24</span>
+                <p>per seat / month</p>
+                <a class="button" href="#cta">Start building</a>
+              </div>
+            </div>
+          </section>
+
+          <section id="cta" class="cta reveal">
+            <div>
+              <h2>Ready to keep the beat?</h2>
+              <p>Join the waitlist to get early access and shape the roadmap.</p>
+            </div>
+            <a class="button" href="#waitlist-form">Join now</a>
+          </section>
         </main>
+        <footer class="footer">
+          <span>Built for teams who ship.</span>
+          <span>beatrock © 2026</span>
+        </footer>
       </div>
     </div>
-      <script src="app.js" defer></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
