--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
     <title>beatrock</title>
     <link rel="stylesheet" href="styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Archivo+Black&display=swap" rel="stylesheet" />
+    <script src="app.js" defer></script>
   </head>
   <body>
     <div class="page">
-      <div class="orb orb--one"></div>
-      <div class="orb orb--two"></div>
+      <div class="orb orb--one" aria-hidden="true"></div>
+      <div class="orb orb--two" aria-hidden="true"></div>
       <div class="gridlines" aria-hidden="true"></div>
       <div class="shell">
         <header class="nav">
@@ -22,114 +23,198 @@
           </nav>
           <a class="button" href="#cta">Get Access</a>
         </header>
+
         <main>
-          <section class="hero reveal">
+          <section class="hero reveal" id="top">
             <div class="hero-text">
               <span class="badge">Ship faster · stay aligned</span>
               <h1>beatrock keeps momentum high.</h1>
-              <p>Build with focus. Beatrock turns goals into weekly wins with a rhythm your team can sustain.</p>
+              <p>Build with focus. beatrock turns goals into weekly wins with a rhythm your team can feel: clarity, accountability, and decisive execution.</p>
               <div class="hero-actions">
-                <form id="waitlist-form">
-                  <input type="email" name="email" placeholder="you@company.com" required />
-                  <button class="button" type="submit">Join the waitlist</button>
-                </form>
-                <p class="form-note" id="form-note">Zero spam. Early teams get founder onboarding.</p>
+                <a class="button button--primary" href="#cta">Join the waitlist</a>
+                <a class="button button--ghost" href="#workflow">See the workflow</a>
+              </div>
+              <div class="mini-stats">
+                <div>
+                  <strong>4-day cadence</strong>
+                  <span>Plan · Build · Ship · Learn</span>
+                </div>
+                <div>
+                  <strong>Sync in minutes</strong>
+                  <span>Async updates, one voice</span>
+                </div>
               </div>
             </div>
-            <div class="hero-card">
-              <div class="pulse"></div>
-              <h3>Momentum board</h3>
-              <p>Pick a beat, align tasks, and watch delivery stack every week.</p>
-              <ul>
-                <li>Monday goals</li>
-                <li>Midweek pulse</li>
-                <li>Friday shiplist</li>
-              </ul>
+            <div class="hero-panel">
+              <div class="panel-card">
+                <div class="panel-header">
+                  <span>Today</span>
+                  <strong>Momentum Board</strong>
+                </div>
+                <div class="panel-track">
+                  <div class="track-item">
+                    <span>🎧</span>
+                    <div>
+                      <strong>Kickoff pulse</strong>
+                      <p>Goals locked, owner assigned</p>
+                    </div>
+                  </div>
+                  <div class="track-item">
+                    <span>⚡</span>
+                    <div>
+                      <strong>Build sprint</strong>
+                      <p>Top 3 deliverables in motion</p>
+                    </div>
+                  </div>
+                  <div class="track-item">
+                    <span>🧠</span>
+                    <div>
+                      <strong>Retro signal</strong>
+                      <p>Insights from the last ship</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel-footer">
+                  <span class="chip">Live</span>
+                  <span class="chip chip--muted">Week 12</span>
+                </div>
+              </div>
+              <div class="panel-wave" aria-hidden="true"></div>
             </div>
           </section>
 
-          <section id="features" class="features reveal">
+          <section class="features reveal" id="features">
             <div class="section-title">
-              <span class="eyebrow">Features</span>
-              <h2>Designed for velocity and clarity.</h2>
+              <p class="eyebrow">Features</p>
+              <h2>Get a beat your whole team can follow.</h2>
             </div>
             <div class="feature-grid">
-              <article>
-                <h4>Beat sync</h4>
-                <p>Align priorities with a shared weekly cadence that keeps teams in flow.</p>
+              <article class="feature-card">
+                <h3>Rhythm Sprints</h3>
+                <p>Fixed-length cycles keep shipping predictable and sustainable without the burnout.</p>
               </article>
-              <article>
-                <h4>Pulse notes</h4>
-                <p>Capture micro-decisions without the meeting drag or lost context.</p>
+              <article class="feature-card">
+                <h3>Signal Dashboards</h3>
+                <p>Track goals, blockers, and shipping confidence in a single view.</p>
               </article>
-              <article>
-                <h4>Momentum signals</h4>
-                <p>Surface risks early so shipping never stalls out mid-sprint.</p>
+              <article class="feature-card">
+                <h3>Async Pulse</h3>
+                <p>Lightweight updates summarize progress so meetings stay rare and short.</p>
+              </article>
+              <article class="feature-card">
+                <h3>Momentum Score</h3>
+                <p>Measure team energy and performance with a clear, shared metric.</p>
               </article>
             </div>
           </section>
 
-          <section id="workflow" class="workflow reveal">
+          <section class="workflow reveal" id="workflow">
             <div class="section-title">
-              <span class="eyebrow">Workflow</span>
-              <h2>A 3-step rhythm.</h2>
+              <p class="eyebrow">Workflow</p>
+              <h2>One loop, four moves.</h2>
             </div>
             <div class="workflow-steps">
               <div class="step">
-                <span>01</span>
-                <h4>Set the beat</h4>
-                <p>Define outcomes, assign owners, and agree on what shipping looks like.</p>
+                <span class="step-number">01</span>
+                <div>
+                  <h3>Align</h3>
+                  <p>Set the weekly outcomes and define the quality bar.</p>
+                </div>
               </div>
               <div class="step">
-                <span>02</span>
-                <h4>Hold the pulse</h4>
-                <p>Quick async check-ins replace endless status meetings.</p>
+                <span class="step-number">02</span>
+                <div>
+                  <h3>Build</h3>
+                  <p>Ship in focused blocks with a visible scope boundary.</p>
+                </div>
               </div>
               <div class="step">
-                <span>03</span>
-                <h4>Ship and learn</h4>
-                <p>Friday rollups capture wins, misses, and the next beat.</p>
+                <span class="step-number">03</span>
+                <div>
+                  <h3>Ship</h3>
+                  <p>Launch to customers with release notes generated for you.</p>
+                </div>
+              </div>
+              <div class="step">
+                <span class="step-number">04</span>
+                <div>
+                  <h3>Learn</h3>
+                  <p>Capture insights and roll directly into the next loop.</p>
+                </div>
               </div>
             </div>
           </section>
 
-          <section id="pricing" class="pricing reveal">
+          <section class="pricing reveal" id="pricing">
             <div class="section-title">
-              <span class="eyebrow">Pricing</span>
-              <h2>Simple, honest, ready to scale.</h2>
+              <p class="eyebrow">Pricing</p>
+              <h2>Plans for teams ready to move.</h2>
             </div>
-            <div class="pricing-card">
-              <div>
-                <h3>Founding Teams</h3>
-                <p>Everything you need to run a weekly cadence.</p>
+            <div class="pricing-grid">
+              <div class="price-card">
+                <h3>Launch</h3>
+                <p class="price">$12<span>/seat</span></p>
                 <ul>
-                  <li>Unlimited beats</li>
-                  <li>Team insights</li>
-                  <li>Priority onboarding</li>
+                  <li>Weekly rhythm boards</li>
+                  <li>Async pulse updates</li>
+                  <li>3 integrations</li>
                 </ul>
+                <a class="button button--ghost" href="#cta">Start here</a>
               </div>
-              <div class="price">
-                <span>$24</span>
-                <p>per seat / month</p>
-                <a class="button" href="#cta">Start building</a>
+              <div class="price-card price-card--featured">
+                <div class="ribbon">Most Popular</div>
+                <h3>Momentum</h3>
+                <p class="price">$24<span>/seat</span></p>
+                <ul>
+                  <li>Everything in Launch</li>
+                  <li>Signal dashboards</li>
+                  <li>Release notes automation</li>
+                </ul>
+                <a class="button button--primary" href="#cta">Get momentum</a>
+              </div>
+              <div class="price-card">
+                <h3>Studio</h3>
+                <p class="price">Custom</p>
+                <ul>
+                  <li>Dedicated success lead</li>
+                  <li>Advanced analytics</li>
+                  <li>On-site enablement</li>
+                </ul>
+                <a class="button button--ghost" href="#cta">Talk to us</a>
               </div>
             </div>
           </section>
 
-          <section id="cta" class="cta reveal">
-            <div>
-              <h2>Ready to keep the beat?</h2>
-              <p>Join the waitlist to get early access and shape the roadmap.</p>
+          <section class="cta reveal" id="cta">
+            <div class="cta-card">
+              <div>
+                <h2>Stay in the loop.</h2>
+                <p>Join the waitlist for early access, private betas, and launch perks.</p>
+              </div>
+              <form class="waitlist" id="waitlist-form">
+                <input type="text" id="name" name="name" placeholder="Name" autocomplete="name" />
+                <input type="email" id="email" name="email" placeholder="Work email" autocomplete="email" required />
+                <button type="submit" class="button button--primary">Request access</button>
+                <p class="form-message" id="form-message" role="status" aria-live="polite"></p>
+                <div class="waitlist-meta">
+                  <span id="waitlist-count">2,184 teams waiting</span>
+                  <span class="divider">•</span>
+                  <span>Early access in waves</span>
+                </div>
+              </form>
             </div>
-            <a class="button" href="#waitlist-form">Join now</a>
           </section>
         </main>
+
         <footer class="footer">
-          <span>Built for teams who ship.</span>
-          <span>beatrock © 2026</span>
+          <p>© 2026 beatrock. Built for product teams that ship with intention.</p>
+          <div class="footer-links">
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Contact</a>
+          </div>
         </footer>
       </div>
     </div>
-    <script src="app.js"></script>
   </body>
 </html>
