--- a/public/index.html
+++ b/public/index.html
@@ -1,136 +1,1 @@
-<!doctype html>
-<html lang='en'>
-  <head>
-    <meta charset='utf-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1' />
-    <title>beatrock</title>
-    <link rel='preconnect' href='https://fonts.googleapis.com' />
-    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
-    <link href='https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;800&family=Space+Grotesk:wght@500;700&display=swap' rel='stylesheet' />
-    <link rel='stylesheet' href='styles.css' />
-    <script src='app.js' defer></script>
-  </head>
-  <body>
-    <div class='page'>
-      <div class='orb orb--one'></div>
-      <div class='orb orb--two'></div>
-      <div class='orb orb--three'></div>
-
-      <div class='shell'>
-        <header class='nav'>
-          <a class='logo' href='#'>beatrock</a>
-          <nav class='nav-links'>
-            <a href='#features'>Features</a>
-            <a href='#workflow'>Workflow</a>
-            <a href='#pricing'>Pricing</a>
-          </nav>
-          <a class='button button--ghost' href='#cta'>Get Access</a>
-        </header>
-
-        <main>
-          <section class='hero reveal'>
-            <div class='hero-copy'>
-              <span class='badge'>Ship faster - stay aligned</span>
-              <h1>Keep product momentum high from sprint zero to launch day.</h1>
-              <p class='lead'>beatrock gives product, design, and engineering one sharp rhythm for decisions, specs, and release-ready execution.</p>
-
-              <form id='waitlist-form' class='waitlist'>
-                <label class='sr-only' for='email'>Email</label>
-                <input id='email' type='email' name='email' placeholder='you@company.com' required />
-                <button id='waitlist-submit' class='button' type='submit'>Join the waitlist</button>
-              </form>
-              <p id='form-note' class='form-note' aria-live='polite'></p>
-
-              <div class='hero-metrics'>
-                <div>
-                  <strong>2.8x</strong>
-                  <span>faster spec handoff</span>
-                </div>
-                <div>
-                  <strong>40%</strong>
-                  <span>fewer status meetings</span>
-                </div>
-                <div>
-                  <strong>24h</strong>
-                  <span>from decision to shipped update</span>
-                </div>
-              </div>
-            </div>
-
-            <div class='hero-visual' aria-hidden='true'>
-              <div class='visual-card'>
-                <p>Current sprint</p>
-                <h3>Release Composer</h3>
-                <ul>
-                  <li>Roadmap synced</li>
-                  <li>Design signoff live</li>
-                  <li>Build pipeline green</li>
-                </ul>
-              </div>
-            </div>
-          </section>
-
-          <section id='features' class='panel reveal'>
-            <h2>Built for teams that move in beats, not bottlenecks.</h2>
-            <div class='grid'>
-              <article class='card'>
-                <h3>Decision Stream</h3>
-                <p>Capture product calls with owner, context, and follow-through in one timeline.</p>
-              </article>
-              <article class='card'>
-                <h3>Spec-to-Ship</h3>
-                <p>Turn scoped ideas into implementation checklists with clear design and engineering links.</p>
-              </article>
-              <article class='card'>
-                <h3>Launch Signals</h3>
-                <p>Watch rollout health, feedback, and next actions without switching tools.</p>
-              </article>
-            </div>
-          </section>
-
-          <section id='workflow' class='panel panel--split reveal'>
-            <div>
-              <h2>One rhythm across the whole workflow.</h2>
-              <p>From kickoff to post-launch, beatrock keeps every phase focused and visible.</p>
-            </div>
-            <ol class='steps'>
-              <li><span>1</span>Align goals and scope in a shared sprint brief.</li>
-              <li><span>2</span>Convert decisions into executable product slices.</li>
-              <li><span>3</span>Ship, measure, and feed insights back into planning.</li>
-            </ol>
-          </section>
-
-          <section id='pricing' class='panel reveal'>
-            <h2>Simple early access pricing.</h2>
-            <div class='grid'>
-              <article class='card card--price'>
-                <h3>Starter</h3>
-                <p class='price'>$0</p>
-                <p>Up to 8 teammates during beta.</p>
-              </article>
-              <article class='card card--price card--featured'>
-                <h3>Growth</h3>
-                <p class='price'>$29<span>/user</span></p>
-                <p>Unlimited projects, release analytics, and advanced workflows.</p>
-              </article>
-              <article class='card card--price'>
-                <h3>Scale</h3>
-                <p class='price'>Custom</p>
-                <p>Enterprise security, onboarding support, and dedicated success.</p>
-              </article>
-            </div>
-          </section>
-
-          <section id='cta' class='cta reveal'>
-            <h2>Join teams already building with beatrock.</h2>
-            <a class='button' href='#waitlist-form'>Reserve your spot</a>
-          </section>
-        </main>
-
-        <footer class='footer'>
-          <small>beatrock - product velocity with design clarity.</small>
-        </footer>
-      </div>
-    </div>
-  </body>
-</html>
+Add a `#beat-lab` section with form controls (genre select, BPM range slider, mood chips, length select), a live summary panel, and a primary CTA (`Generate Preview`). Include semantic labels, `aria-live` for summary updates, and IDs/hooks for JS wiring.
